# mwrap

./: .gitignore  CMakeLists.txt  NEWS  README  README.md
.github/workflows/: ci.yml
cmake/: MwrapAddMex.cmake  run_stringify.cmake
doc/: Makefile  mwrap.tex  mwrap.tex.in
example/: CMakeLists.txt  run_example.m.in
example/zlib/: Makefile  gzfile.mw
python/: COPYING  README.md  mwrap  mwrap_ast.py  mwrap_cgen.py  mwrap_lexer.py  mwrap_mgen.py  mwrap_parser.py  mwrap_support.c  mwrap_typecheck.py
src/: CMakeLists.txt  Makefile  mwrap-ast.h  mwrap-cgen.cc  mwrap-mgen.cc  mwrap-support.c  mwrap-typecheck.cc  mwrap.y  mwrap.y.in
testing/: CMakeLists.txt  Makefile  run_matlab_tests.m  test_all_gpu.m  test_c99_complexmex.c  test_catchmex.cc  test_char.m  test_charmex.cc  test_cpp_complexmex.cc  test_gpu.m  test_gpu_complex.m  test_gpu_complex.mw  test_gpu_int32.m  test_python.sh  test_single.m  test_singlemex.cc  test_transfers.mw  test_transfersmex.cc
